[tool.poetry]
name = "Running-helper-Space"
version = "0.1.0"
description = ""
authors = ["artyom-ev"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fitdecode = "*"
pandas = "*"
plotly = "*"
streamlit = "*"
streamlit-option-menu = "*"
altair = "^4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
